--- a/style.css
+++ b/style.css
@@ -16,36 +16,37 @@ header {
     text-align: center;
     padding: 50px 0;
 }
+
 @media(width<768px){
     header{
         font-size: 10px;
     }
 }
 
-nav ul {
+.option-navigation {
     list-style: none;
     padding: 0;
     text-align: center;
 }
 
 @media(width<768px){
-    nav ul{
+    .option-navigation{
         display: flex;
         flex-direction: column;
     }
 }
 
-nav ul li {
+.option-navigation li {
     display: inline;
     margin: 0 10px;
 }
 
-nav ul li a {
+.option-navigation a {
     text-decoration: none;
     color: #333;
 }
 
-nav ul li a:hover {
+.option-navigation a:hover {
     text-decoration: underline;
 }
 
@@ -59,9 +60,3 @@ section {
 
 
 
-/* footer {
-    text-align: center;
-    background: #333;
-    color: #fff;
-    padding: 20px 0;
-} */
