--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.4;
     margin: 0;
     padding: 0;
 }
@@ -55,6 +55,12 @@ section {
     margin: 10px 0;
     padding: 20px;
     border-radius: 5px;
+}
+.image{
+    margin-left: 600px;
+}
+.name{
+    text-align: center;
 }
 
 
